/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
package org.apache.airavata.mft.resource.service.scp;

import "scp/SCPStorage.proto";

service SCPStorageService {

    rpc listSCPStorage (org.apache.airavata.mft.resource.stubs.scp.storage.SCPStorageListRequest) returns
    (org.apache.airavata.mft.resource.stubs.scp.storage.SCPStorageListResponse);

    rpc getSCPStorage (org.apache.airavata.mft.resource.stubs.scp.storage.SCPStorageGetRequest) returns
    (org.apache.airavata.mft.resource.stubs.scp.storage.SCPStorage);

    rpc createSCPStorage (org.apache.airavata.mft.resource.stubs.scp.storage.SCPStorageCreateRequest) returns
    (org.apache.airavata.mft.resource.stubs.scp.storage.SCPStorage);

    rpc updateSCPStorage (org.apache.airavata.mft.resource.stubs.scp.storage.SCPStorageUpdateRequest) returns
    (org.apache.airavata.mft.resource.stubs.scp.storage.SCPStorageUpdateResponse);

    rpc deleteSCPStorage (org.apache.airavata.mft.resource.stubs.scp.storage.SCPStorageDeleteRequest) returns
    (org.apache.airavata.mft.resource.stubs.scp.storage.SCPStorageDeleteResponse);
}